--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
-  color: #222222;
+  color: var(--secondary-color);
   background: none repeat scroll 0 0;
   background-color: #ffffff;
   margin: 0 auto;
@@ -47,6 +47,5 @@ img {
 h2 {
   text-transform: capitalize;
   color: var(--secondary-color);
-  font-size: 2.375rem;
   font-weight: 800;
 }
