footer design complete

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   custom properties 
 --------------------*/
 :root {
-  --primary-color: #87b303;
+  --primary-color: #7aa300;
   --secondary-color: #333333;
 }
 
