--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,8 @@ h2 {
   color: var(--secondary-color);
   font-weight: 800;
 }
+
+/* custom margin for drop-down menu */
+.cMT{
+  margin-top: 40px !important;
+}
